# visual-compute-engine

./: .dockerignore  ARCHITECTURE.md  Makefile  README.md
.github/workflows/: deploy-production.yml  deploy-staging.yml
compute/: Cargo.toml  fastly.toml  rust-toolchain.toml  security-rules.json
compute/VCL/: edge-auth-error.vcl  edge-auth-recv.vcl
compute/src/: lib.rs  main.rs
compute/src/rules/: graph.rs  loader.rs  logging.rs  mod.rs  types.rs
core/: Cargo.toml  test.mjs
core/src/: bench_compression.rs  interpreter.rs  lib.rs  nodes.rs  wasm.rs
deployment/: Dockerfile  build-config.py  cloudbuild.yaml  nginx.conf  run-service.template.yaml
deployment/config/: production.yml  staging.yml
docs/: TERRAFORM_INTEGRATION.md
editor-ui/: .npmrc  index.html  local-server.js  package-lock.json  package.json  vite.config.ts
editor-ui/src/: App.tsx  BeaconProvider.tsx  cc-core.d.ts  index.css  main.tsx  vce-core.d.ts
editor-ui/src/assets/: configure-compute.wasm.b64  vce-engine.wasm.b64
editor-ui/src/components/: BeaconShellHeader.tsx  CCHeader.css  CCHeader.tsx  DeployPanel.tsx  NodeEditor.tsx  Sidebar.tsx  TestPanel.tsx  VCEHeader.css  VCEHeader.tsx
editor-ui/src/components/edges/: DeletableEdge.tsx
editor-ui/src/components/nodes/: ActionNode.tsx  BackendNode.tsx  CacheNode.tsx  ConditionNode.tsx  HeaderNode.tsx  LoggingNode.tsx  NodeBase.tsx  RateLimitNode.tsx  RequestNode.tsx  RuleGroupNode.tsx  TransformNode.tsx  index.ts
editor-ui/src/hooks/: useWasmCore.ts
editor-ui/src/lib/: fastlyPackage.ts
editor-ui/src/styles/: components.css  nodes.css  theme.ts  tokens.css
editor-ui/src/templates/: index.ts
editor-ui/src/utils/: ruleConverter.ts
integration-tests/: test-graphs.mjs
shared/: node-schema.json
