[package]
name = "vce-engine"
version = "1.2.0"
authors = ["Fastly"]
edition = "2021"
description = "Visual Compute Engine - Edge rules processing for Fastly Compute"
publish = false

[profile.release]
debug = false
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"

[dependencies]
fastly = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.5"
cidr = "0.2"
chrono = "0.4.39"
uuid = { version = "1.11.0", features = ["v7", "serde"] }
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
hmac-sha256 = "1.1.8"
base64 = "0.22.1"
thiserror = "1.0"
flate2 = "1.0"
