[package]
name = "rusty-shield-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["CSOC Team"]
description = "Core node graph types and interpreter for Rusty Shield security rules"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.8"
thiserror = "1.0"

# WASM support
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"

# Use getrandom with js feature for WASM compatibility
getrandom = { version = "0.2", features = ["js"] }

[features]
default = []
wasm = []

[dev-dependencies]
flate2 = "1.0"
base64 = "0.22"
